--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('https://i.imgur.com/VI5S4rO.png');
+  background-repeat: no-repeat;
+
 }
 
 code {
@@ -115,6 +118,7 @@ label {
   font-size: 2vmin;
   display: flex;
   align-items: center;
+  justify-content: left;
 }
 
 input {
@@ -134,8 +138,8 @@ input:focus {
 button, a.button {
   margin: 1vmin;
   padding: 1vmin;
-  color: var(--white);
-  background-color: var(--orange);
+  color: white;
+  background-color: #0c7091; 
   font-size: 2vmin;
   font-weight: bold;
   text-decoration: none;
@@ -158,7 +162,7 @@ button.btn-xs {
 
 button:disabled, form:invalid button[type="submit"] {
   cursor: not-allowed;
-  background-color: var(--tan-4);
+  background-color: rgb(232, 209, 174);
 }
 
 button[type="submit"] {
