--- a/src/pages/BucketListPage/BucketListPage.css
+++ b/src/pages/BucketListPage/BucketListPage.css
@@ -1,6 +1,8 @@
 .bucketListPage {
     display: grid;
     grid-template-columns: 400px 400px;
+    justify-content: center;
+    gap: 50px;
 }
 
 h1 {
