--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url('https://i.imgur.com/VI5S4rO.png');
-  background-repeat: no-repeat;
+
 
 }
 
@@ -31,17 +30,7 @@ code {
   box-sizing: border-box;
 }
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: var(--tan-4);
-  padding: 2vmin;
-  height: 100vh;
-}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -86,7 +75,7 @@ code {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: var(--tan-1);
+  background-color: white; 
   color: var(--text-dark);
   border: .1vmin solid var(--tan-3);
   border-radius: 1vmin;
@@ -97,7 +86,7 @@ code {
 
 .form-container {
   padding: 3vmin;
-  background-color: var(--tan-1);
+  background-color: white; 
   border: .1vmin solid var(--tan-3);
   border-radius: 1vmin;
 }
@@ -136,15 +125,14 @@ input:focus {
 }
 
 button, a.button {
-  margin: 1vmin;
   padding: 1vmin;
   color: white;
-  background-color: #0c7091; 
+  background-color: transparent; 
   font-size: 2vmin;
   font-weight: bold;
   text-decoration: none;
   text-align: center;
-  border: .1vmin solid var(--tan-2);
+  border: transparent; 
   border-radius: .5vmin;
   outline: none;
   cursor: pointer;
@@ -167,5 +155,5 @@ button:disabled, form:invalid button[type="submit"] {
 
 button[type="submit"] {
   grid-column: span 2;
-  margin: 1vmin 0 0;
+
 }
