--- a/src/components/ReviewCard/ReviewCard.css
+++ b/src/components/ReviewCard/ReviewCard.css
@@ -15,4 +15,10 @@
     border-collapse: collapse;
     border-top: 1px solid grey;
     margin: 3px;
+    color: navy;
+}
+
+th {
+    color: orange; 
+
 }
