--- a/src/components/BucketListItem/BucketListItem.css
+++ b/src/components/BucketListItem/BucketListItem.css
@@ -1,17 +1,56 @@
 .bll-table {
   display: grid;
-  grid-template-columns: 8vmin 20vmin 10vmin 15vmin 8vmin;  
+  grid-template-columns: 4vmin 10vmin 10vmin 10vmin 10vmin 4vmin;  
   align-items: center;
+  gap: 0;
+  border-bottom: 1px solid grey;
 }
 
-.bll-btn::before {
+#bll-btn::before {
     content: '🔲';
     background-color: transparent;
     border-color: transparent;
+    border-radius: 0;
 }
 
-.bll-btn:hover:before {
+#bll-btn:hover:before {
   content: '✔️';
-    background-color: transparent;
-    border-color: transparent;
+  background-color: transparent;
+  border-color: transparent;
+  border-radius: 0;
+}
+
+.bl-link{ 
+  color: navy; 
+  text-decoration: none;
+  
+}
+
+.breweriesCardCom {
+  display: grid;
+  justify-content: center;
+  border-radius: 0;
+}
+
+.bc-link {
+  text-decoration: none;
+  color: red;
+  border-radius: 0;
+  
+}
+
+.breweriesListTable {
+  table-layout: auto;
+  width: 100%;
+  height: 100px; 
+  border-collapse: collapse;
+  display: grid;
+  align-items: center;
+  margin: 3px;
+  color: navy;
+  border-radius: 0;
+}
+
+.deleteBrewery {
+  border-radius: 0;
 }
