--- a/src/components/RandomBreweryCard/RandomBreweryCard.css
+++ b/src/components/RandomBreweryCard/RandomBreweryCard.css
@@ -15,3 +15,29 @@
     font-size: 12px; 
 }
 
+.rbc-table {
+    table-layout: fixed;
+    width: 100%;
+    height: 90px;
+    border-collapse: collapse;
+    margin: 5px;
+    color: navy;
+    display: flex; 
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    padding: 5px; 
+}
+
+.randomBreweriesCard {
+    display: grid;
+    grid-template-columns: 15vmin 8vmin 15vmin 7vmin 3vmin; 
+    border-bottom: 1px solid grey;
+    align-items: center;
+    gap: 1px;
+}
+
+.randomBreweriesCardCom { 
+    display: grid;
+    justify-content: center;
+}
