--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -3,16 +3,17 @@
     padding: 0;
     height: 15vmin; 
     display: grid;
-    grid-template-columns: 40vmin 40vmin 40vmin 40vmin 40vmin;
+    grid-template-columns: 20% 20% 20% 20% 20%;
     align-items: center; 
     font-size: 14px;
 }
 
 a {
     text-decoration: none;
+    color: navy;
 }
 
 .navBar-End {
-    padding-right: 2px;
+
     text-align: right;
 }
