--- a/src/pages/BucketListPage/BucketListPage.css
+++ b/src/pages/BucketListPage/BucketListPage.css
@@ -23,6 +23,7 @@ h1 {
     margin-top: 25px; 
     margin-bottom: -5px;
     margin-top: 70vh;
+    font-family: 'Shrikhand', cursive;
 }
 
 .breweryForm {
