--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -6,11 +6,14 @@
     grid-template-columns: 20% 20% 20% 20% 20%;
     align-items: center; 
     font-size: 14px;
+    color: navy; 
+    font-family: 'Shrikhand', cursive;
 }
 
 a {
     text-decoration: none;
     color: navy;
+    font-family: 'Shrikhand', cursive;
 }
 
 .navBar-End {
