--- a/src/pages/BucketListPage/BucketListPage.css
+++ b/src/pages/BucketListPage/BucketListPage.css
@@ -4,7 +4,7 @@
     justify-content: center;
     gap: 75px;
     background-color: #fce183;
-    background-image: url('https://i.imgur.com/6V6Ai9q.png');
+    background-image: url('https://i.imgur.com/wsuA4uF.png');
     background-repeat: no-repeat;
     background-size: contain;
     
@@ -24,8 +24,16 @@ h1 {
     margin-bottom: -5px;
     margin-top: 70vh;
     font-family: 'Shrikhand', cursive;
+    color: #002554;
 }
 
 .breweryForm {
     margin-top: 70vh;
+}
+
+.bl-h1 {
+    font-size: 5vmin;
+    padding-top: 8vmin;
+    padding-top: none;
+    margin-top: none;
 }
