--- a/src/components/BreweryReviewForm/BreweryReviewForm.css
+++ b/src/components/BreweryReviewForm/BreweryReviewForm.css
@@ -20,8 +20,11 @@
 .brf-btn {
     grid-column: span 2;
     background-color: navy;
-    width: 90px; 
+    width: 150px; 
+    margin-left: 60px;
+    margin-top: 5px;
     font-size: 15px; 
+    font-family: 'Open Sans', sans-serif;
 }
 
 .reviewForminput {
