--- a/src/components/BucketListForm/BucketListForm.css
+++ b/src/components/BucketListForm/BucketListForm.css
@@ -3,7 +3,7 @@
         grid-template-columns: 110px 150px;
         gap: 1vmin;
         color: var(--text-light);
-        width: 350px; 
+        width: 325px; 
         font-size: 4px; 
         padding: 3vmin;
         background-color: white; 
@@ -15,8 +15,10 @@
 .blbutton { 
     grid-column: span 2;
     background-color: navy;
-    width: 200px; 
+    width: 250px; 
     font-size: 15px; 
+    margin-left: 9px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .blFormInput {
