--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,15 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #192841;
-  background-color: lightsalmon;  
+  background-color: rgb(247, 222, 182);  
 
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Open Sans', sans-serif;
 }
 
 /* CSS Custom Properties */
@@ -34,8 +31,8 @@ code {
 
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Open Sans', sans-serif;
+   
 }
 
 #root {
@@ -122,7 +119,7 @@ input {
 }
 
 input:focus {
-  border-color: var(--orange);
+  border-color: rgb(194, 104, 84);
 }
 
 button, a.button {
