--- a/src/pages/BreweriesPage/BreweriesPage.css
+++ b/src/pages/BreweriesPage/BreweriesPage.css
@@ -1,6 +1,24 @@
-h1 {
+.breweriesPage { 
+    margin-top: -50px;
+    background-color: #f26e43;
+    width: 500px;
+}
+
+.bp-gif {
+    background-image: url('https://media.giphy.com/media/nBqsei9DoFjyOfAnlH/giphy.gif');
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 35vmin;
+    mix-blend-mode: overlay; 
+    margin-bottom: 30px;
+    margin-top: 20px;
+    border: none;
+}
+
+.bp-h1 {
     color: navy; 
     font-family: 'Shrikhand', cursive;
     font-size: 70px;
-}  
-
+    padding-top: 150px;
+    margin-bottom: -100px;
+}
