--- a/src/pages/BreweryDetailPage/BreweryDetailPage.css
+++ b/src/pages/BreweryDetailPage/BreweryDetailPage.css
@@ -1,9 +1,9 @@
 .BreweryDetailPage{ 
-    background-color: #fce183;
+    background-color: rgb(130, 172, 164);
     height: 150vh;
     display: grid;
     justify-content: center;
-    color: #152238
+    color: #152238;
 }
 
 .bdp {
@@ -12,6 +12,35 @@
     color: #152238
 }
 
-h1 {
-    color: #192841; 
+.dp-h1 {
+    color: rgb(194, 104, 84); 
+    width: 200vh;
+    text-align: center;
+    display: grid;
+    justify-content: center;
+    padding: 0;
+    margin-left: -645px;
+    font-family: 'Shrikhand', cursive;
+    font-size: 70px;
+    padding-top: 150px;
+    margin-bottom: 00px;
+}
+
+.bdp-ptag {
+    font-family: 'Open Sans', sans-serif;
+    color: white;
+    font-size: 30px;
+    line-height: 10px;
+}
+
+.bdp-table {
+    display: grid;
+    grid-template-columns: 15vmin 20vmin 10vmin 15vmin;  
+    align-items: center;
+    margin-left: -10px;
+}
+
+.bdp-row {
+    width: 100%;
+    color: navy;
 }
