--- a/src/pages/BreweryDetailPage/BreweryDetailPage.css
+++ b/src/pages/BreweryDetailPage/BreweryDetailPage.css
@@ -1,9 +1,11 @@
 .BreweryDetailPage{ 
     background-color: rgb(130, 172, 164);
     height: 150vh;
-    display: grid;
+    display: flex;
     justify-content: center;
+    text-align: center;
     color: #152238;
+    margin-bottom: -10px; 
 }
 
 .bdp {
@@ -14,14 +16,10 @@
 
 .dp-h1 {
     color: rgb(194, 104, 84); 
-    width: 200vh;
-    text-align: center;
-    display: grid;
-    justify-content: center;
     padding: 0;
-    margin-left: -645px;
+    margin: auto;
     font-family: 'Shrikhand', cursive;
-    font-size: 70px;
+    font-size: 50px;
     padding-top: 150px;
     margin-bottom: 00px;
 }
@@ -35,9 +33,10 @@
 
 .bdp-table {
     display: grid;
-    grid-template-columns: 15vmin 20vmin 10vmin 15vmin;  
-    align-items: center;
-    margin-left: -10px;
+    grid-template-columns: 22vmin 14vmin 17vmin 8vmin;  
+    gap: 0;
+    justify-content: center;
+    /* margin-left: -10px; */
 }
 
 .bdp-row {
