--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,4 +1,11 @@
 .footer {
-    background-color: transparent;
+    background-color: rgb(194, 104, 84);
     text-align: right;
+    position: absolute; 
+    width: 100%;
+    height: 60px;
+    margin-top: 5px;
+    align-items: center;
+    display: flex;
+    justify-content: right;
 }
