--- a/src/components/RandomBreweryCard/RandomBreweryCard.css
+++ b/src/components/RandomBreweryCard/RandomBreweryCard.css
@@ -31,7 +31,7 @@
 
 .randomBreweriesCard {
     display: grid;
-    grid-template-columns: 15vmin 8vmin 15vmin 7vmin 3vmin; 
+    grid-template-columns: 15vmin 18vmin 9vmin 8vmin;  
     border-bottom: 1px solid grey;
     align-items: center;
     gap: 1px;
