--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,7 +4,8 @@
     position: absolute; 
     width: 100%;
     height: 60px;
-    margin-top: 5px;
+    /* margin-top: 5px; */
+    padding-top: 5px;
     align-items: center;
     display: flex;
     justify-content: right;
