--- a/src/index.css
+++ b/src/index.css
@@ -84,24 +84,19 @@ code {
   font-size: 2vmin;
 }
 
-.form-container {
-  padding: 3vmin;
-  background-color: white; 
-  border: .1vmin solid var(--tan-3);
-  border-radius: 1vmin;
-}
+
 
 p.error-message {
   color: var(--orange);
   text-align: center;
 }
 
-form {
+/* form {
   display: grid;
   grid-template-columns: 1fr 3fr;
   gap: 1.25vmin;
   color: var(--text-light);
-}
+} */
 
 label {
   font-size: 2vmin;
