--- a/src/pages/BreweriesPage/BreweriesPage.css
+++ b/src/pages/BreweriesPage/BreweriesPage.css
@@ -27,5 +27,5 @@
 .bp-container {
     padding-bottom: 110px;
     background-color: rgb(247, 222, 182);  
-    height: 680px
+    height: 150vmin
 }
