--- a/src/components/BreweriesCard/BreweriesCard.css
+++ b/src/components/BreweriesCard/BreweriesCard.css
@@ -10,7 +10,8 @@
 
 .breweriesCard {
     display: grid;
-    grid-template-columns:  10vmin 40vmin 15vmin 20vmin;  
+    grid-template-columns:  5vmin 25vmin 15vmin 20vmin 9vmin;  
+    border-top: 1px solid rgb(194, 104, 84);
     align-items: center;
 }
 
@@ -19,7 +20,7 @@
     width: 100%;
     height: 40px;
     border-collapse: collapse;
-    border-top: 1px solid grey;
+   
     margin: 5px;
     color: navy;
     display: grid;
