--- a/src/pages/BucketListPage/BucketListPage.css
+++ b/src/pages/BucketListPage/BucketListPage.css
@@ -40,5 +40,8 @@
     margin-top: 100vh;
     margin-left: -60vmin;
     margin-right: -39vmin;
+    /* background-image: url('https://i.imgur.com/1gKm2cs.gif');
+    background-repeat: no-repeat;
+    background-size: contain;   */
   
 }
