--- a/src/components/BreweriesCard/BreweriesCard.css
+++ b/src/components/BreweriesCard/BreweriesCard.css
@@ -11,6 +11,8 @@
 .breweriesCard {
     display: grid;
     grid-template-columns:  5vmin 25vmin 15vmin 20vmin 9vmin;  
+    padding-bottom: 15px;
+    padding-top: 15px;
     border-top: 1px solid rgb(194, 104, 84);
     align-items: center;
 }
@@ -20,25 +22,26 @@
     width: 100%;
     height: 40px;
     border-collapse: collapse;
-   
     margin: 5px;
-    color: navy;
+    color: rgb(194, 104, 84);
     display: grid;
     justify-content: center;
     align-content: center;
     align-items: center;
     padding-top: 10px;
+    
 }
 
 #bDetails {
     color: rgb(194, 104, 84);
+    font-family: 'Shrikhand', cursive;
+    font-size: 15px;
 }
 
 th {
     color: navy;
 }
 
-
-#checkmark {
-    font-family: 'Shrikhand', cursive;
+#brewery-details {
+    font-family: 'Open Sans', sans-serif;
 }
