--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,6 @@ body {
   background-color: white;
   position: relative; 
   min-height: 100vh;
-
 }
 
 code {
@@ -17,12 +16,7 @@ code {
 /* CSS Custom Properties */
 :root {
   --white: #FFFFFF;
-  --tan-1: #FBF9F6;
-  --tan-2: #E7E2DD;
   --tan-3: #E2D9D1;
-  --tan-4: #D3C1AE;
-  --orange: #F67F00;
-  --text-light: #968c84;
   --text-dark: #615954;
 }
 
@@ -30,71 +24,18 @@ code {
   box-sizing: border-box;
 }
 
-
-
 code {
   font-family: 'Open Sans', sans-serif;
-   
 }
 
 #root {
   height: 100%;
 }
 
-.align-ctr {
-  text-align: center;
-}
-
-.align-rt {
-  text-align: right;
-}
-
-.smaller {
-  font-size: smaller;
-}
-
-.flex-ctr-ctr {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.flex-col {
-  flex-direction: column;
-}
-
-.flex-j-end {
-  justify-content: flex-end;
-}
-
-.scroll-y {
-  overflow-y: scroll;
-}
-
-.section-heading {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: white; 
-  color: var(--text-dark);
-  border: .1vmin solid var(--tan-3);
-  border-radius: 1vmin;
-  padding: .6vmin;
-  text-align: center;
-  font-size: 2vmin;
-}
-
 p.error-message {
-  color: var(--orange);
+  color: rgb(194, 104, 84);
   text-align: center;
 }
-
-/* form {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  gap: 1.25vmin;
-  color: var(--text-light);
-} */
 
 label {
   font-size: 2vmin;
@@ -131,22 +72,6 @@ button, a.button {
   cursor: pointer;
 }
 
-button.btn-sm {
-  font-size: 1.5vmin;
-  padding: .6vmin .8vmin;
-}
-
-button.btn-xs {
-  font-size: 1vmin;
-  padding: .4vmin .5vmin;
-}
-
-button:disabled, form:invalid button[type="submit"] {
-  cursor: not-allowed;
-  background-color: navy; 
-}
-
 button[type="submit"] {
   grid-column: span 2;
-
 }
