--- a/src/pages/AuthPage/AuthPage.css
+++ b/src/pages/AuthPage/AuthPage.css
@@ -13,13 +13,11 @@
     align-content: center;
     margin: auto;
     height: 100%;
-    padding-top: 20%;
-    
+    padding-top: 20%;  
 }
 
 .auth-btn {
     color: rgb(194, 104, 84); 
-    background-color: transparent;
     margin-top: -25px;
 }
 
@@ -38,11 +36,16 @@
     font-family: 'Open Sans', sans-serif;
 }
 
-.authBTN, form:valid button[type="submit"]  {
+.authBTN {
     background-color: navy;
-    
+    background-color: navy;
 }
 
 .auth-ptag {
     margin-top: -35px;
+}
+
+.auth-input {
+    font-family: 'Open Sans', sans-serif;
+    color: black; 
 }
