--- a/src/pages/BucketListPage/BucketListPage.css
+++ b/src/pages/BucketListPage/BucketListPage.css
@@ -7,9 +7,26 @@
     background-image: url('https://i.imgur.com/eLTj2do.png');
     background-repeat: no-repeat;
     background-size: contain;  
-    margin-bottom: 30px; 
+    padding-bottom: 30px; 
 }
 
+/* .backgroundDiv {
+    background-image: url('https://i.imgur.com/eLTj2do.png');
+    background-repeat: no-repeat;
+    background-size: contain;  
+    margin-left: -50vh;
+    height: 900vmin;
+    background-color: white;
+} */
+
+.bl-gif {
+    margin-top: 95vmin;
+    margin-left: -110vmin;
+    margin-right: -30vmin;
+    /* background-image: url('https://i.imgur.com/1gKm2cs.gif');
+    background-repeat: no-repeat;
+    background-size: contain;   */
+}
 .blf-div {
     margin-bottom: 15px;
 }
@@ -21,10 +38,6 @@
     color: navy;
 }
 
-.breweryForm {
-    /* margin-top: 95vh; */
-}
-
 .bl-h1 { 
     display: grid;
     grid-column: span 2;
@@ -34,14 +47,4 @@
     font-family: 'Shrikhand', cursive;
     font-size: 30px;
     margin-bottom: -80px;
-}
-
-.bl-gif {
-    margin-top: 100vh;
-    margin-left: -60vmin;
-    margin-right: -39vmin;
-    /* background-image: url('https://i.imgur.com/1gKm2cs.gif');
-    background-repeat: no-repeat;
-    background-size: contain;   */
-  
 }
