--- a/src/components/BucketListItem/BucketListItem.css
+++ b/src/components/BucketListItem/BucketListItem.css
@@ -1,8 +1,8 @@
 .bll-table {
   display: grid;
-  grid-template-columns: 6vmin 18vmin 18vmin 8vmin 10vmin 6vmin;  
+  grid-template-columns: 6vmin 18vmin 15vmin 5vmin 10vmin 5vmin;  
   align-items: center;
-  gap: 0;
+  gap: 8px ;
   border-bottom: 1px solid rgb(194, 104, 84);
   padding-bottom: 7px;
   text-align: left;
