--- a/src/components/BucketListForm/BucketListForm.css
+++ b/src/components/BucketListForm/BucketListForm.css
@@ -3,7 +3,7 @@
         grid-template-columns: 110px 150px;
         gap: 1vmin;
         color: var(--text-light);
-        width: 325px; 
+        width: 400px; 
         font-size: 4px; 
         padding: 3vmin;
         background-color: white; 
@@ -15,16 +15,17 @@
 .blbutton { 
     grid-column: span 2;
     background-color: navy;
-    width: 250px; 
+    width: 280px; 
     font-size: 15px; 
-    margin-left: 9px;
+    margin-left: 23px;
     font-family: 'Open Sans', sans-serif;
 }
 
 .blFormInput {
-    color: navy;
+    color: black;
     font-size: 15px; 
     text-align: left;
+    width: 210px;
 }
 
 .blFormLabel {
