--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -6,6 +6,7 @@
     height: 60px;
     /* margin-top: 5px; */
     padding-top: 5px;
+    padding-right: 10px;
     align-items: center;
     display: flex;
     justify-content: right;
